--- a/html_files/kiennghi1992.html
+++ b/html_files/kiennghi1992.html
@@ -76,7 +76,7 @@
 </head>
 <body>
 <div class="topbar">
-<div class="topbar-inner"><a class="btn" href="index.html">Về Trang Phan Đình Diệu</a>
+<div class="topbar-inner"><a class="btn" href="../index.html">Về Trang Phan Đình Diệu</a>
 <button class="btn" onclick="window.scrollTo({top:0, behavior:'smooth'})">Lên đầu trang</button>
 <button class="btn" onclick="window.print()">In / Lưu PDF</button>
 </div>
